<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ContactDetailFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="@+id/tvGenre"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGenrelabel"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/text_label_genero"
        app:layout_constraintBaseline_toBaselineOf="@id/tvGenre"
        app:layout_constraintEnd_toStartOf="@id/tvGenre" />

    <TextView
        android:id="@+id/tvGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tvName"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Genero"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />


    <TextView
        android:id="@+id/tvNamelabel"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/text_label_nombre"
        app:layout_constraintBaseline_toBaselineOf="@id/tvName"
        app:layout_constraintEnd_toStartOf="@id/tvGenre" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:text="nombre"
        app:layout_constraintBottom_toTopOf="@id/tvUsername"
        app:layout_constraintStart_toStartOf="@+id/tvGenre"
        app:layout_constraintTop_toBottomOf="@id/tvGenre" />

    <TextView
        android:id="@+id/tvUsernamelabel"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/text_label_usuario"
        app:layout_constraintBaseline_toBaselineOf="@id/tvUsername"
        app:layout_constraintEnd_toStartOf="@id/tvGenre" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:text="nombre usuario"
        app:layout_constraintBottom_toTopOf="@id/tvEmail"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <TextView
        android:id="@+id/tvEmaillabel"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/text_label_correo"
        app:layout_constraintBaseline_toBaselineOf="@id/tvEmail"
        app:layout_constraintEnd_toStartOf="@id/tvGenre" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Correo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/tvPhone"
        app:layout_constraintStart_toStartOf="@+id/tvUsername"
        app:layout_constraintTop_toBottomOf="@id/tvUsername" />

    <TextView
        android:id="@+id/tvPhonelabel"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/text_label_telefono"
        app:layout_constraintBaseline_toBaselineOf="@id/tvPhone"
        app:layout_constraintEnd_toStartOf="@id/tvGenre" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="tvPhone"
        app:layout_constraintBottom_toTopOf="@id/tvAddress"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@id/tvEmail" />

    <TextView
        android:id="@+id/tvAddresslabel"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/text_label_dirección"
        app:layout_constraintBaseline_toBaselineOf="@id/tvAddress"
        app:layout_constraintEnd_toStartOf="@id/tvGenre" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Direccion"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvPhone"
        app:layout_constraintTop_toBottomOf="@id/tvPhone" />
</androidx.constraintlayout.widget.ConstraintLayout>